--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,91 @@
 version: '3.8'
-
+#In dieser Docker Compose erstellen wir einen Container Bauplan für: Reverse Proxy, Datenbank, Redis und n8n Webhook Editor und Worker
 services:
-  n8n:
-    image: n8nio/n8n:latest
-    container_name: exCal-n8n
-    restart: always
+  traefik:
+    
+    image: traefik:v2.10
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
     ports:
-      - "5678:5678"
-    environment:
-      - N8N_HOST=localhost
-      - N8N_PORT=5678
-      - N8N_PROTOCOL=http
-      - NODE_ENV=production
-      - WEBHOOK_URL=http://localhost:5678/
-      # Sicherheit (Optional aber empfohlen):
-      # - N8N_BASIC_AUTH_ACTIVE=true
-      # - N8N_BASIC_AUTH_USER=admin
-      # - N8N_BASIC_AUTH_PASSWORD=geheim
+      - "80:80"
+      - "8080:8080"
     volumes:
-      # WICHTIG: Der Punkt (.) bedeutet "dieser Ordner hier".
-      # Damit landen die n8n-Dateien direkt in deinem Projektordner unter /n8n_data
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+
+  postgres:
+   
+    image: postgres:13
+    restart: always
+    environment:
+      - POSTGRES_USER=n8n
+      - POSTGRES_PASSWORD=db-password-change-me
+      - POSTGRES_DB=n8n
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data
+
+  redis:
+   
+    image: redis:6-alpine
+    restart: always
+    volumes:
+      - ./redis_data:/data
+
+
+  n8n-editor:
+    image: docker.n8n.io/n8nio/n8n
+    restart: always
+    command: start
+    environment:
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_USER=n8n
+      - DB_POSTGRESDB_PASSWORD=db-password-change-me
+      - N8N_ENCRYPTION_KEY=super-secret-key-change-me
+      - EXECUTIONS_MODE=queue
+      - QUEUE_BULL_REDIS_HOST=redis
+      - WEBHOOK_URL=http://localhost/
+      - WEBHOOK_CORS_ALLOWED_ORIGINS=* ports:
+      - "5678:5678"
+    links:
+      - postgres
+      - redis
+    depends_on:
+      - postgres
+      - redis
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.n8n.rule=Host(`localhost`)"
+      - "traefik.http.routers.n8n.entrypoints=web"
+    volumes:
       - ./n8n_data:/home/node/.n8n
-      # Optional: Falls du lokale Dateien in n8n verarbeiten willst:
-      - ./local_files:/files
+
+  n8n-worker:
+    image: docker.n8n.io/n8nio/n8n
+    restart: always
+    command: worker  # WICHTIG: Startet im Worker-Modus
+    environment:
+      # Gleiche DB & Redis Infos wie oben, damit er Jobs findet
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_USER=n8n
+      - DB_POSTGRESDB_PASSWORD=db-password-change-me
+      - N8N_ENCRYPTION_KEY=super-secret-key-change-me
+      - EXECUTIONS_MODE=queue
+      - QUEUE_BULL_REDIS_HOST=redis
+    links:
+      - postgres
+      - redis
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./n8n_data:/home/node/.n8n
+    # KEINE Traefik Labels und KEINE Ports hier!
+    # Der Worker muss nicht vom Internet erreichbar sein.
