--- a/calendar-extension/manifest.json
+++ b/calendar-extension/manifest.json
@@ -7,6 +7,9 @@
     "activeTab",
     "scripting"
   ],
+  "host_permissions": [
+    "http://localhost/*"
+  ],
   "action": {
     "default_popup": "popup/popup.html",
     "default_title": "Create Calendar Entry"
