--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,37 +2,36 @@ version: '3.8'
 #In dieser Docker Compose erstellen wir einen Container Bauplan für: Reverse Proxy, Datenbank, Redis und n8n Webhook Editor und Worker
 services:
   traefik:
-    
     image: traefik:v2.10
     command:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
+      - "--accesslog=true"
+      - "--accesslog.filepath=/var/log/traefik/access.log"
     ports:
       - "80:80"
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./logs/traefik:/var/log/traefik
 
   postgres:
-   
     image: postgres:13
     restart: always
     environment:
-      - POSTGRES_USER=n8n
-      - POSTGRES_PASSWORD=db-password-change-me
-      - POSTGRES_DB=n8n
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
 
   redis:
-   
     image: redis:6-alpine
     restart: always
     volumes:
       - ./redis_data:/data
-
 
   n8n-editor:
     image: docker.n8n.io/n8nio/n8n
@@ -42,15 +41,16 @@ services:
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=postgres
       - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_DATABASE=n8n
-      - DB_POSTGRESDB_USER=n8n
-      - DB_POSTGRESDB_PASSWORD=db-password-change-me
-      - N8N_ENCRYPTION_KEY=super-secret-key-change-me
+      - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
+      - DB_POSTGRESDB_USER=${POSTGRES_USER}
+      - DB_POSTGRESDB_PASSWORD=${POSTGRES_PASSWORD}
+      - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}
       - EXECUTIONS_MODE=queue
       - QUEUE_BULL_REDIS_HOST=redis
-      - WEBHOOK_URL=http://localhost/
-      - WEBHOOK_CORS_ALLOWED_ORIGINS=* ports:
-      - "5678:5678"
+      - WEBHOOK_URL=${WEBHOOK_URL}
+      - WEBHOOK_CORS_ALLOWED_ORIGINS=*
+      - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
+
     links:
       - postgres
       - redis
@@ -67,18 +67,18 @@ services:
   n8n-worker:
     image: docker.n8n.io/n8nio/n8n
     restart: always
-    command: worker  # WICHTIG: Startet im Worker-Modus
+    command: worker
     environment:
-      # Gleiche DB & Redis Infos wie oben, damit er Jobs findet
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=postgres
       - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_DATABASE=n8n
-      - DB_POSTGRESDB_USER=n8n
-      - DB_POSTGRESDB_PASSWORD=db-password-change-me
-      - N8N_ENCRYPTION_KEY=super-secret-key-change-me
+      - DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
+      - DB_POSTGRESDB_USER=${POSTGRES_USER}
+      - DB_POSTGRESDB_PASSWORD=${POSTGRES_PASSWORD}
+      - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}
       - EXECUTIONS_MODE=queue
       - QUEUE_BULL_REDIS_HOST=redis
+      - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
     links:
       - postgres
       - redis
@@ -87,5 +87,3 @@ services:
       - redis
     volumes:
       - ./n8n_data:/home/node/.n8n
-    # KEINE Traefik Labels und KEINE Ports hier!
-    # Der Worker muss nicht vom Internet erreichbar sein.
