--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,16 @@ services:
   redis:
     image: redis:6-alpine
     restart: always
+    ports:
+      - "6379:6379"
     volumes:
       - ./redis_data:/data
 
   n8n-editor:
     image: docker.n8n.io/n8nio/n8n
     restart: always
+    ports:
+      - "5678:5678"
     command: start
     environment:
       - DB_TYPE=postgresdb
@@ -50,6 +54,10 @@ services:
       - WEBHOOK_URL=${WEBHOOK_URL}
       - WEBHOOK_CORS_ALLOWED_ORIGINS=*
       - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
+      - N8N_PROXY_HOPS=1
+      - N8N_BASIC_AUTH_ACTIVE=true
+      - N8N_BASIC_AUTH_USER=${N8N_BASIC_AUTH_USER}
+      - N8N_BASIC_AUTH_PASSWORD=${N8N_BASIC_AUTH_PASSWORD}
 
     links:
       - postgres
@@ -61,9 +69,9 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.n8n.rule=Host(`localhost`)"
       - "traefik.http.routers.n8n.entrypoints=web"
+      - "traefik.http.services.n8n.loadbalancer.server.port=5678"
     volumes:
       - ./n8n_data:/home/node/.n8n
-
   n8n-worker:
     image: docker.n8n.io/n8nio/n8n
     restart: always
